--- a/_scss/layout/_footer.scss
+++ b/_scss/layout/_footer.scss
@@ -72,6 +72,7 @@
 	}
 
 	a {
+		background: transparent;
 		color: $white;
 
 		&:hover {
